# tml

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  .mcp.json  .rulebook  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  GEMINI.md  LICENSE  README.md  _analyze_tests.js  compile_commands.json  coverage_report.md  gemini-extension.json  loop.cpp  run_tests.ps1  temp_iter_test.tml  test_closure_simple.tml  test_dll_usage.c  test_fail.tml  test_fold_simple.tml  test_incr.tml  test_lib.tml  test_lib_usage.c  test_neg_literal.tml  test_out.txt  tml.toml  vcpkg.json
benchmarks/cpp/: CMakeLists.txt  algorithms.cpp  bench_arithmetic.cpp  http_server_bench.cpp  json_bench.cpp  json_raw_bench.cpp  json_simdjson_bench.cpp  oop_bench.cpp  tcp_bind_bench.cpp
benchmarks/profile_cpp/: CMakeLists.txt  build_msvc.bat  closure_bench.cpp  control_flow_bench.cpp  crypto_bench.cpp  encoding_bench.cpp  function_bench.cpp  hashmap_bench.cpp  list_bench.cpp  oop_bench.cpp  string_bench.cpp
benchmarks/rust/: Cargo.toml  algorithms.rs  bench_arithmetic.rs  hashmap_bench.rs  http_server_bench.rs  json_bench.rs  list_bench.rs  main.rs  oop_bench.rs  optimization_bench.rs  tcp_async_bench.rs  tcp_sync_bench.rs  tcp_tokio_async_bench.rs  tcp_udp_request_bench.rs
benchmarks/rust/benches/: algorithms.rs  http_server_bench.rs
benchmarks/rust/json_bench/: Cargo.toml
compiler/: .gitignore  CMakeLists.txt  README.md
compiler/cmake/: collect_modules.cmake
compiler/cranelift/: Cargo.toml
compiler/cranelift/.cargo/: config.toml
compiler/cranelift/src/: error.rs  lib.rs  mir_reader.rs  mir_types.rs  translate.rs  types.rs
compiler/include/: common.hpp  version_generated.hpp.in
compiler/include/backend/: cranelift_bridge.h  lld_linker.hpp  llvm_backend.hpp
compiler/include/borrow/: checker.hpp  polonius.hpp
compiler/include/codegen/: c_gen.hpp  c_header_gen.hpp  codegen_backend.hpp  codegen_partitioner.hpp  llvm_ir_gen.hpp  mir_codegen.hpp  target.hpp
compiler/include/common/: crc32c.hpp
compiler/include/derive/: registry.hpp
compiler/include/doc/: doc_model.hpp  doc_parser.hpp  extractor.hpp  generators.hpp  signature.hpp
compiler/include/format/: formatter.hpp
compiler/include/hir/: hir.hpp  hir_builder.hpp  hir_decl.hpp  hir_expr.hpp  hir_id.hpp  hir_module.hpp  hir_pass.hpp  hir_pattern.hpp  hir_printer.hpp  hir_serialize.hpp  hir_stmt.hpp
compiler/include/ir/: ir.hpp
compiler/include/json/: json.hpp  json_allocator.hpp  json_builder.hpp  json_error.hpp  json_fast_parser.hpp  json_parser.hpp  json_rpc.hpp  json_schema.hpp  json_value.hpp
compiler/include/lexer/: lexer.hpp  source.hpp  token.hpp
compiler/include/log/: log.hpp
compiler/include/mcp/: mcp_server.hpp  mcp_tools.hpp  mcp_types.hpp
compiler/include/mir/: hir_mir_builder.hpp  mir.hpp  mir_builder.hpp  mir_pass.hpp  mir_serialize.hpp  thir_mir_builder.hpp
compiler/include/parser/: ast.hpp  ast_common.hpp  ast_decls.hpp  ast_exprs.hpp  ast_oop.hpp  ast_patterns.hpp  ast_stmts.hpp  ast_types.hpp  parser.hpp
compiler/include/plugin/: abi.h  codegen_api.h  loader.hpp  module.hpp
compiler/include/preprocessor/: preprocessor.hpp
compiler/include/profiler/: profiler.hpp
compiler/include/query/: query_cache.hpp  query_context.hpp  query_core.hpp  query_deps.hpp  query_fingerprint.hpp  query_incr.hpp  query_key.hpp  query_provider.hpp
compiler/include/search/: bm25_index.hpp  hnsw_index.hpp  simd_distance.hpp
compiler/include/thir/: exhaustiveness.hpp  thir.hpp  thir_expr.hpp  thir_lower.hpp  thir_module.hpp  thir_stmt.hpp
compiler/include/traits/: solver.hpp
compiler/include/types/: builtins_cache.hpp  checker.hpp  env.hpp  env_stability.hpp  module.hpp  module_binary.hpp  module_metadata.hpp  type.hpp
compiler/runtime/: async.c  async.h  backtrace.c  backtrace.h  collections.c  compat.h  crypto.c  essential.c  essential.h  io.c  math.c  mem.c  mem_track.c  mem_track.h  net.c  profile_runtime.c  string.c  sync.c  text.c  thread.c
compiler/runtime/collections/: collections.c
compiler/runtime/concurrency/: async.c  sync.c  thread.c
compiler/runtime/core/: essential.c  essential.h  io.c
compiler/runtime/crypto/: crypto.c  crypto_common.h  crypto_dh.c  crypto_ecdh.c  crypto_kdf.c  crypto_key.c  crypto_rsa.c  crypto_sign.c  crypto_x509.c
compiler/runtime/diagnostics/: backtrace.c  log.c  log.h
compiler/runtime/math/: math.c
compiler/runtime/memory/: mem.c  mem_track.c  mem_track.h  pool.c
compiler/runtime/net/: dns.c  net.c  poll.c  tls.c
compiler/runtime/os/: os.c
compiler/runtime/search/: search.c  search_engine.cpp
compiler/runtime/text/: string.c  text.c
compiler/runtime/time/: time.c
compiler/src/: main.cpp  main_mcp.cpp  tml.rc
compiler/src/backend/: lld_linker.cpp  llvm_backend.cpp
compiler/src/borrow/: checker_core.cpp  checker_env.cpp  checker_expr.cpp  checker_nll.cpp  checker_ops.cpp  checker_stmt.cpp  polonius_checker.cpp  polonius_facts.cpp  polonius_solver.cpp
compiler/src/cli/: build_cache.cpp  build_cache.hpp  build_config.cpp  build_config.hpp  cli.cpp  cmd_build.cpp  cmd_build.hpp  cmd_cache.cpp  cmd_cache.hpp  cmd_debug.cpp  cmd_debug.hpp  cmd_format.cpp  cmd_format.hpp  cmd_init.cpp  cmd_init.hpp  cmd_lint.cpp  cmd_lint.hpp  cmd_pkg.cpp  cmd_pkg.hpp  cmd_rlib.cpp  cmd_rlib.hpp  cmd_test.cpp  cmd_test.hpp  compiler_setup.cpp  compiler_setup.hpp  dependency_resolver.cpp  dependency_resolver.hpp  diagnostic.cpp  diagnostic.hpp  dispatcher.cpp  driver.hpp  object_compiler.cpp  object_compiler.hpp  parallel_build.cpp  parallel_build.hpp  rlib.cpp  rlib.hpp  test_runner.cpp  test_runner.hpp  utils.cpp  (+1 more)
compiler/src/codegen/: c_header_gen.cpp  codegen_backend.cpp  codegen_partitioner.cpp  llvm_ir_gen.cpp  llvm_ir_gen_builtins.cpp  llvm_ir_gen_control.cpp  (+4 more)
compiler/tests/: borrow_test.cpp  codegen_builtins_test.cpp  codegen_test.cpp  escape_analysis_test.cpp  format_test.cpp  hir_test.cpp  ir_test.cpp  json_test.cpp  lexer_test.cpp  log_test.cpp  mir_optimization_bench.cpp  mir_test.cpp  oop_test.cpp  parser_test.cpp  types_test.cpp
(+3554 files in other folders)
